demo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      volumes:
        - name: shared-img
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: demo
          image: enayetee/demo
          volumeMounts:
            - name: shared-img
              mountPath: /uploads
