demo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 8080
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
